Add visible fallback content

--- a/index.html
+++ b/index.html
@@ -100,6 +100,19 @@
 </script>
 </head>
 <body>
-    <div id="root"></div>
+  <h1 style="color:white; font-family:sans-serif;">
+    CarbonX-Ray
+  </h1>
+
+  <p style="color:#cbd5e1; font-family:sans-serif;">
+    Making Invisible Carbon Emissions Visible
+  </p>
+
+  <p style="color:#94a3b8; font-family:sans-serif;">
+    Prototype deployed via GitHub Pages for hackathon demo.
+  </p>
+
+  <div id="root"></div>
 </body>
+
 </html>
