--- a/index.html
+++ b/index.html
@@ -1,100 +1,64 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ample.ai | Custom AI Systems & Infrastructure</title>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CarbonX-Trace</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/pyodide/v0.25.0/full/pyodide.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #0B0D12; /* Deep Charcoal */
-            color: #E2E4E9; /* Off-white */
-        }
-        ::selection {
-            background: #1B3B6F; /* Deep Blue */
-            color: #ffffff;
-        }
-        .glass {
-            background: rgba(255, 255, 255, 0.02);
-            backdrop-filter: blur(16px);
-            border: 1px solid rgba(255, 255, 255, 0.05);
-        }
-        .glass-card {
-            background: linear-gradient(180deg, rgba(22, 24, 29, 0.6) 0%, rgba(22, 24, 29, 0.3) 100%);
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.03);
-            transition: all 0.4s cubic-bezier(0.2, 0, 0.2, 1);
-        }
-        .glass-card:hover {
-            border-color: rgba(72, 16, 34, 0.3); /* Wine red hint on hover */
-            background: linear-gradient(180deg, rgba(22, 24, 29, 0.8) 0%, rgba(72, 16, 34, 0.05) 100%);
-        }
-        .text-gradient {
-            background: linear-gradient(to bottom right, #ffffff, #94a3b8);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-        @keyframes pulse-ring {
-            0% { transform: scale(0.33); opacity: 0; }
-            50% { opacity: 0.5; }
-            100% { transform: scale(1.1); opacity: 0; }
-        }
-        .pulse-orb {
-            animation: pulse-ring 2s cubic-bezier(0.45, 0, 0.55, 1) infinite;
-        }
-
-        /* Custom Animations */
-        @keyframes fade-in {
-          0% { opacity: 0; transform: translateY(20px); }
-          100% { opacity: 1; transform: translateY(0); }
-        }
-        @keyframes fade-up {
-          0% { opacity: 0; transform: translateY(40px); }
-          100% { opacity: 1; transform: translateY(0); }
-        }
-        @keyframes orbit {
-          0% { transform: rotate(0deg) translateY(calc(var(--radius) * 1px)) rotate(0deg); }
-          100% { transform: rotate(360deg) translateY(calc(var(--radius) * 1px)) rotate(-360deg); }
-        }
-        @keyframes spotlight {
-          0% { opacity: 0; transform: translate(-72%, -62%) scale(0.5); }
-          100% { opacity: 1; transform: translate(-50%,-40%) scale(1); }
-        }
-
-        .animate-fade-in {
-          animation: fade-in 1s ease-out forwards;
-        }
-        .animate-fade-up {
-          animation: fade-up 1s ease-out forwards;
-        }
-        .animate-orbit {
-          animation: orbit calc(var(--duration)*1s) linear infinite;
-        }
-        .animate-spotlight {
-          animation: spotlight 2s ease .75s 1 forwards;
-        }
+      body {
+        font-family: 'Inter', sans-serif;
+        background-color: #050505;
+        color: #ffffff;
+      }
+      /* Custom Scrollbar */
+      ::-webkit-scrollbar {
+        width: 8px;
+      }
+      ::-webkit-scrollbar-track {
+        background: #0a0a0a;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #222;
+        border-radius: 4px;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #333;
+      }
+      .glass-panel {
+        background: rgba(255, 255, 255, 0.03);
+        backdrop-filter: blur(10px);
+        border: 1px solid rgba(255, 255, 255, 0.08);
+      }
+      .glow-text {
+        text-shadow: 0 0 20px rgba(16, 185, 129, 0.5);
+      }
+      .glow-border {
+        box-shadow: 0 0 15px rgba(16, 185, 129, 0.1);
+        transition: box-shadow 0.3s ease;
+      }
+      .glow-border:hover {
+        box-shadow: 0 0 25px rgba(16, 185, 129, 0.25);
+      }
+      .badge-pill {
+        display: inline-block;
+        padding: 0.5rem 1rem;
+        border-radius: 9999px;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        background-color: rgba(255, 255, 255, 0.05);
+        font-size: 0.875rem;
+      }
     </style>
-<script type="importmap">
+  <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "react/": "https://esm.sh/react@19.0.0/",
-    "react-dom/": "https://esm.sh/react-dom@19.0.0/",
-    "framer-motion": "https://esm.sh/framer-motion@11.15.0?external=react,react-dom",
-    "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
-    "clsx": "https://esm.sh/clsx",
-    "tailwind-merge": "https://esm.sh/tailwind-merge",
-    "lucide-react": "https://esm.sh/lucide-react?external=react",
-    "@radix-ui/react-slot": "https://esm.sh/@radix-ui/react-slot?external=react",
-    "class-variance-authority": "https://esm.sh/class-variance-authority",
-    "@splinetool/react-spline": "https://esm.sh/@splinetool/react-spline@latest",
-    "@splinetool/runtime": "https://esm.sh/@splinetool/runtime@latest"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "react": "https://esm.sh/react@^19.2.4",
+    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
+    "recharts": "https://esm.sh/recharts@^3.7.0"
   }
 }
 </script>
@@ -114,5 +78,5 @@
 
   <div id="root"></div>
 </body>
-
+</html>
 </html>
