--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
   <p style="color:#94a3b8; font-family:sans-serif;">
     Prototype deployed via GitHub Pages for hackathon demo.
   </p>
+  <p style="color:#6ee7b7; margin-top:12px;">
+  Data sourced from EPA emission factors
+</p>
+
 
   <div id="root"></div>
 </body>
