--- a/index.html
+++ b/index.html
@@ -3,67 +3,78 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CarbonX-Trace</title>
+    <title>CarbonX-Trace | Unified Carbon Intelligence</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/pyodide/v0.25.0/full/pyodide.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     <style>
+      :root {
+        --bg-color: #050505;
+        --accent-emerald: #10B981;
+        --accent-blue: #3B82F6;
+      }
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #050505;
+        background-color: var(--bg-color);
         color: #ffffff;
+        overflow-x: hidden;
       }
       /* Custom Scrollbar */
       ::-webkit-scrollbar {
-        width: 8px;
+        width: 6px;
       }
       ::-webkit-scrollbar-track {
         background: #0a0a0a;
       }
       ::-webkit-scrollbar-thumb {
         background: #222;
-        border-radius: 4px;
+        border-radius: 10px;
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #333;
       }
       .glass-panel {
-        background: rgba(255, 255, 255, 0.03);
-        backdrop-filter: blur(10px);
+        background: rgba(255, 255, 255, 0.02);
+        backdrop-filter: blur(12px);
         border: 1px solid rgba(255, 255, 255, 0.08);
       }
-      .glow-text {
-        text-shadow: 0 0 20px rgba(16, 185, 129, 0.5);
+      .glow-text-emerald {
+        text-shadow: 0 0 20px rgba(16, 185, 129, 0.4);
       }
-      .glow-border {
-        box-shadow: 0 0 15px rgba(16, 185, 129, 0.1);
-        transition: box-shadow 0.3s ease;
+      .glow-text-blue {
+        text-shadow: 0 0 20px rgba(59, 130, 246, 0.4);
       }
-      .glow-border:hover {
-        box-shadow: 0 0 25px rgba(16, 185, 129, 0.25);
+      .glow-border-emerald:hover {
+        box-shadow: 0 0 30px rgba(16, 185, 129, 0.15);
+        border-color: rgba(16, 185, 129, 0.3);
       }
-      .badge-pill {
-        display: inline-block;
-        padding: 0.5rem 1rem;
-        border-radius: 9999px;
-        border: 1px solid rgba(255, 255, 255, 0.1);
-        background-color: rgba(255, 255, 255, 0.05);
-        font-size: 0.875rem;
+      .glow-border-blue:hover {
+        box-shadow: 0 0 30px rgba(59, 130, 246, 0.15);
+        border-color: rgba(59, 130, 246, 0.3);
+      }
+      .animate-fade-in {
+        animation: fadeIn 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+      }
+      @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(10px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+      .font-mono {
+        font-family: 'JetBrains Mono', monospace;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
-    "recharts": "https://esm.sh/recharts@^3.7.0"
-  }
-}
-</script>
-</head>
-<body>
+    <script type="importmap">
+    {
+      "imports": {
+        "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+        "react/": "https://esm.sh/react@^19.2.4/",
+        "react": "https://esm.sh/react@^19.2.4",
+        "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
+        "recharts": "https://esm.sh/recharts@^3.7.0"
+      }
+    }
+    </script>
+  </head>
+ <body>
   <h1 style="color:white; font-family:sans-serif;">
     CarbonX-Ray
   </h1>
@@ -75,12 +86,8 @@
   <p style="color:#94a3b8; font-family:sans-serif;">
     Prototype deployed via GitHub Pages for hackathon demo.
   </p>
-  <p style="color:#6ee7b7; margin-top:12px;">
-  Data sourced from EPA emission factors
-</p>
-
 
   <div id="root"></div>
 </body>
-</html>
+
 </html>
