--- a/index.html
+++ b/index.html
@@ -75,19 +75,62 @@
     </script>
   </head>
  <body>
-  <h1 style="color:white; font-family:sans-serif;">
-    CarbonX-Ray
-  </h1>
+ <body class="bg-[#050505] text-white font-sans">
 
-  <p style="color:#cbd5e1; font-family:sans-serif;">
-    Making Invisible Carbon Emissions Visible
-  </p>
+  <!-- NAVBAR -->
+  <nav class="flex items-center justify-between px-6 py-4 glass-panel">
+    <div class="flex items-center gap-3">
+      <div class="w-8 h-8 rounded-xl bg-gradient-to-tr from-emerald-400 to-blue-500 flex items-center justify-center font-bold text-black">
+        X
+      </div>
+      <span class="font-bold text-lg">CarbonX<span class="text-white/40">Trace</span></span>
+    </div>
 
-  <p style="color:#94a3b8; font-family:sans-serif;">
-    Prototype deployed via GitHub Pages for hackathon demo.
-  </p>
+    <div class="flex bg-white/5 p-1 rounded-full border border-white/10">
+      <button class="px-4 py-1 text-emerald-400 font-semibold">Personal</button>
+      <button class="px-4 py-1 text-white/40">Business</button>
+    </div>
+  </nav>
 
-  <div id="root"></div>
+  <!-- MAIN -->
+  <main class="max-w-6xl mx-auto px-6 pt-16 space-y-10">
+
+    <!-- HEADER -->
+    <section class="flex justify-between items-end">
+      <div>
+        <h1 class="text-4xl font-bold text-emerald-400 glow-text-emerald">
+          CarbonX-Ray
+        </h1>
+        <p class="text-white/40 mt-2">
+          Digital lifestyle forensics powered by Gemini 3.
+        </p>
+      </div>
+
+      <div class="text-right">
+        <p class="text-xs uppercase tracking-widest text-white/30">Impact Potential</p>
+        <p class="text-5xl font-mono font-bold">
+          0.0 <span class="text-white/30 text-xl">g CO₂e</span>
+        </p>
+      </div>
+    </section>
+
+    <!-- UPLOAD CARD -->
+    <section class="glass-panel rounded-2xl p-10 text-center border border-white/10">
+<div class="text-4xl mb-4 opacity-80">📱</div>
+<p class="font-semibold mb-1">Drop Screen Time</p>
+<p class="text-xs text-white/40">Supports PNG / JPG • Demo mode</p>
+    </section>
+
+    <!-- CHART PLACEHOLDER -->
+    <section class="glass-panel rounded-2xl p-10 border border-white/10">
+      <h3 class="font-semibold mb-4">Emission Distribution</h3>
+      <div class="h-48 flex items-center justify-center text-white/20 border border-dashed border-white/10 rounded-xl">
+        Chart will render after analysis
+      </div>
+    </section>
+
+  </main>
+
 </body>
 
 </html>
